# BJTU-Game-Engine

./: .clang-format  .envrc  .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  justfile
.cargo/: config.toml
engine/: CMakeLists.txt
engine/asset/models/characters/aris/: CH0200.fbx
engine/asset/models/characters/koharu/: Koharu_Original.fbx
engine/asset/models/characters/miyako/: CH0215.fbx
engine/asset/models/creeper/: Creeper.mtl  creeper.fbx
engine/asset/models/house/: house.mtl
engine/asset/models/sheep/: sheep.mtl
engine/asset/models/sol/: sol.c4d
engine/asset/models/sword/: DiamondSword.mtl
engine/asset/models/tree/: tree.mtl
engine/asset/textures/blocks/: cobblestone.psd  dirt.psd  grass.psd  oak_leaves.psd  oak_log.psd  oak_planks.psd  red_wool.psd  red_wool_brighter.psd  stone.psd
engine/shader/: CMakeLists.txt
engine/shader/cmake/: generate_shader_cpp_file.cmake  shader_compile_glsl.cmake  shader_compile_spv.cmake
engine/shader/glsl/: '  basic.frag  basic.vert  block.frag  block.vert  common.frag  common.vert  composite0.frag  composite1.frag  composite2.frag  composite3.frag  depth.frag  depth.vert  final.frag  final_fxaa.frag  gbuffer.frag  gbuffer.vert  gbuffer_block.vert  gbuffer_textured.frag  gbuffer_textured.vert  gbuffer_transparent.frag  gbuffer_transparent.vert  gbuffer_water.frag  gbuffer_water.vert  light.frag  material_id.glsl  model.frag  model.vert  model_with_lighting.frag  model_with_lighting.vert  post_process.vert  postprocess.vert  rsm.vert  rsm_block.frag  shadertoy_clouds.frag  shadertoy_slisesix.frag  shading.frag  shading.vert  shadow_map.frag  shadow_map.vert  (+1 more)
engine/shader/include/: config.glsl  constants.glsl  utils.glsl
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
engine/source/runtime/core/: hash_func.h  random.h  utils.cpp  utils.h
engine/source/runtime/function/framework/: framework_common.h
engine/source/runtime/function/framework/component/: component.h
engine/source/runtime/function/framework/component/block/: block_component.h
engine/source/runtime/function/framework/component/block_manager/: block_manager_component.cpp  block_manager_component.h
engine/source/runtime/function/framework/component/mesh/: mesh_component.h
engine/source/runtime/function/framework/component/transform/: transform_component.cpp  transform_component.h
engine/source/runtime/function/framework/level/: level.cpp  level.h
engine/source/runtime/function/framework/object/: object.cpp  object.h
engine/source/runtime/function/framework/world/: world_manager.cpp  world_manager.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/input/: input_system.cpp  input_system.h
engine/source/runtime/function/render/: ':w  face_info.h  render_camera.cpp  render_camera.h  render_entity.cpp  render_entity.h  render_face_manager.cpp  render_face_manager.h  render_framebuffer.cpp  render_framebuffer.h  render_gbuffer_framebuffer.cpp  render_gbuffer_framebuffer.h  render_material.h  render_mesh.cpp  render_mesh.h  render_mesh_base.h  render_mesh_blocks.cpp  render_mesh_blocks.h  render_pipeline.cpp  render_pipeline.h  render_resource.cpp  render_resource.h  render_shader.cpp  render_shader.h  render_shadow_framebuffer.cpp  render_shadow_framebuffer.h  render_system.cpp  render_system.h  render_texture.cpp  render_texture.h  render_texture_3d.cpp  render_texture_3d.h  window_system.cpp  window_system.h
engine/source/runtime/function/render/framebuffer/: render_framebuffer.cpp  render_framebuffer.h  render_gbuffer_framebuffer.cpp  render_gbuffer_framebuffer.h  render_rsm_framebuffer.cpp  render_rsm_framebuffer.h  render_shadow_framebuffer.cpp  render_shadow_framebuffer.h
engine/source/runtime/function/render/lighting/: render_direction_light.cpp  render_direction_light.h  render_spot_light.cpp  render_spot_light.h  spot_light.cpp  spot_light.h
engine/source/runtime/function/render/mesh/: render_mesh.cpp  render_mesh.h  render_mesh_blocks.cpp  render_mesh_blocks.h
engine/source/runtime/function/render/minecraft_blocks/: gmemory_buffer.cpp  gmemory_buffer.h  render_minecraft_blocks_manager.cpp  render_minecraft_blocks_manager.h
engine/source/runtime/function/render/texture/: render_texture.cpp  render_texture.h  render_texture_3d.cpp  render_texture_3d.h  render_texture_base.h
engine/source/runtime/function/swap/: swap_context.cpp  swap_context.h  swap_event.h
engine/source/runtime/function/swap/minecraft_blocks/: add_block_swap_event.cpp  add_block_swap_event.h  remove_block_swap_event.cpp  remove_block_swap_event.h
engine/source/runtime/function/window/: window_system.cpp  window_system.h
notes/: config_notes.md  confusing_me.md  deferred_rendering.md  engine_notes.md  第一次大作业说明文档.md  第二次大作业说明文档.md
scripts/: README.md  glsl-preprocessor.py
scripts/glsl-precompiler-test/: B.glsl  README.md  main.glsl
src/: header.h  main.rs
(+7 files in other folders)
